@@ -21,9 +21,12 @@
 
 package io.crate;
 
+import com.google.common.base.Predicate;
+import com.google.common.base.Predicates;
 import com.google.common.collect.ImmutableSet;
 
 import java.util.Set;
+import java.util.regex.Pattern;
 
 public class Constants {
 
@@ -46,4 +49,5 @@ public class Constants {
 
     public static final Set<String> INVALID_TABLE_NAME_CHARACTERS = ImmutableSet.of(".");
 
+    public static final Predicate<CharSequence> INVALID_COLUMN_NAME_PREDICATE = Predicates.contains(Pattern.compile("[\\[\\'\\]]"));
 }
