@@ -14,6 +14,8 @@ Unreleased
 
  - improved speed of Alter table settings in partitioned tables
 
+ - Restricted allowed characters in column names
+
 2014/12/22 0.46.1
 =================
 
